--- a/SystemDiagnostics Debug/SystemDiagnostics Debug.csproj
+++ b/SystemDiagnostics Debug/SystemDiagnostics Debug.csproj
@@ -10,5 +10,6 @@
   <ItemGroup>
     <Content Include="Robotarms.cs" />
     <Content Include="Program.cs" />
+    <Content Include="myDebuglog.log" />
   </ItemGroup>
 </Project>
